initial changes to wire up to sequencer for creating orders